--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <h1 style="text-align: center;">Hello World</h1>
+    <!-- <h1 style="text-align: center;">Hello World</h1> -->
     <div class="container" data-layout="horizontal">
         <div class="header">
             <h1>GL-Code Platform</h1>
