Adding Fabricon Styles and Index.html

--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GL-Code Platform</title>
+    <link rel="icon" type="image/png" href="logo.png">
+    <link rel="apple-touch-icon" href="logo.png">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <!-- Add Font Awesome CDN as backup for layout icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <h1 style="text-align: center;">Hi Baby</h1>
     <div class="container" data-layout="horizontal">
         <div class="header">
-            <h1>GL-Code Platform</h1>
+            <div class="logo-container">
+                <img src="logo.png" alt="GL-Code Platform Logo" class="header-logo">
+                <h1>GL-Code Platform</h1>
+            </div>
             <div class="actions">
                 <div class="layout-buttons">
                     <button id="layout-horizontal" class="layout-btn active" title="Horizontal Layout">
