--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+    <h1 style="text-align: center;">By Naif AL Essa</h1>
     <div class="container" data-layout="horizontal">
         <div class="header">
             <div class="logo-container">
